# source/routes/routes.ts
@@ -12,6 +12,7 @@ router.get('/psn/:id/summary', controller.psnSummarySVG)
 router.get('/moon-phase', controller.moonPhaseSVG)
 router.get('/anilist-manga/:id/recent', controller.anilistMangaSVG)
 router.get('/anilist-anime/:id/recent', controller.anilistAnimeSVG)
+router.get('/overwatch/:id/summary', controller.overwatchSVG)
 
 router.get('/health', standardRoutes.health)
 router.get('/version', standardRoutes.version)
