# source/server.ts
@@ -42,6 +42,7 @@ router.use('/steam/:id/summary', rateLimiter);
 router.use('/doggo', rateLimiter);
 router.use('/psn/:id/summary', rateLimiter)
 router.use('/moon-phase', rateLimiter)
+router.use('/overwatch/:id/summary', rateLimiter)
 
 
 router.use('/version', standardRateLimiter);
